syntax = "proto2";

package cz.cvut.fit.prl.scala.implicits.mergedsdb;

import "semanticdb.proto";

message MergedSemanticdbs {
    required string projectId = 1;
    repeated string classpaths = 2;
    repeated SourcePath sourcepaths = 3;
    repeated .scala.meta.internal.semanticdb.TextDocument semanticdbs = 4;
}

message SourcePath {
    required string path = 1;
    required string kind = 2;
    required string scope = 3;
}